@@ -52,55 +52,55 @@ elif [[ "$MACHTYPE" != "x86_64"* ]]; then
     fi
 
     if (( jvermaj < 11 )); then
-        echo "PhantomBot requires Java 11 or later to run."
+        echo "PhantomBot benötigt zur Ausführung Java 11 oder höher."
         echo
 
         if  [[ "$osdist" == *"debian"* ]]; then
-            echo "Please install the package openjdk-11-jre-headless"
+            echo "Bitte installieren Sie das Paket openjdk-11-jre-headless"
             echo
 
             if (( osver < 10 )); then
-                echo "WARNING: You are running a Debian derivative lower than version 10 (buster)"
-                echo "Java 11 may not be available on this version"
-                echo "It is recommended to upgrade to at least Debian 10 (buster)"
-                echo "NOTE: Upgrading the major version of the OS usually means a clean install (wipe)"
+                echo "WARNUNG: Du verwendest ein Debian-Derivat niedriger als Version 10 (Buster)"
+                echo "Java 11 ist in dieser Version möglicherweise nicht verfügbar"
+                echo "Es wird empfohlen, mindestens auf Debian 10 (Buster) zu aktualisieren."
+                echo "HINWEIS: Das Aktualisieren der Hauptversion des Betriebssystems bedeutet normalerweise eine saubere Installation (Wipe)."
                 echo
 
                 if (( osver == 9 )); then
-                    echo "Alternatively, you can add the stretch-backports repository to apt and then you should be able to install openjdk-11-jre-headless"
-                    echo "You can find instructions at https://github.com/superjamie/lazyweb/wiki/Raspberry-Pi-Debian-Backports#installation"
+                    echo "Alternativ kannst du das stretch-backports-Repository zu apt hinzufügen und dann solltest du in der Lage sein, openjdk-11-jre-headless zu installieren"
+                    echo "Anleitungen findest du unter https://github.com/superjamie/lazyweb/wiki/Raspberry-Pi-Debian-Backports#installation"
                     echo
                 fi
             fi
 
-            echo "The commands to do this are:"
+            echo "Die Befehle dazu sind:"
             echo "   sudo apt-get install openjdk-11-jre-headless"
             echo "   sudo update-alternatives --config java"
             echo
-            echo "When you issue the update-alternatives command, select the option for java-11-openjdk"
+            echo "Wenn du den Befehl update-alternatives ausgibst, wähle die Option für java-11-openjdk"
         elif  [[ "$osdist" == *"fedora"* || "$osdist" == *"rhel"* ]]; then
-            echo "Please install the package java-11-openjdk-headless"
+            echo "Bitte installiere das Paket java-11-openjdk-headless"
             echo
 
             if [[ "$osdist" == *"rhel"* || "$osdist2" == *"rhel"* ]] && (( osver < 7 )); then
-                echo "WARNING: You are running a RHEL derivative lower than version 7"
-                echo "Java 11 may not be available on this version"
-                echo "It is recommended to upgrade to at least RHEL 7"
-                echo "NOTE: Upgrading the major version of the OS usually means a clean install (wipe)"
+                echo "WARNUNG: Sie verwenden ein RHEL-Derivat niedriger als Version 7"
+                echo "Java 11 ist in dieser Version möglicherweise nicht verfügbar"
+                echo "Es wird empfohlen, mindestens auf RHEL 7 zu aktualisieren"
+                echo "HINWEIS: Das Aktualisieren der Hauptversion des Betriebssystems bedeutet normalerweise eine saubere Installation (Wipe)."
                 echo
             elif (( osver < 29 )); then
-                echo "WARNING: You are running a Fedora derivative lower than version 29"
-                echo "Java 11 may not be available on this version"
-                echo "It is recommended to upgrade to at least Fedora 29"
-                echo "NOTE: Upgrading the major version of the OS usually means a clean install (wipe)"
+                echo "WARNUNG: Du verwendest ein Fedora-Derivat niedriger als Version 29"
+                echo "Java 11 ist in dieser Version möglicherweise nicht verfügbar"
+                echo "Es wird empfohlen, mindestens auf Fedora 29 aufzurüsten"
+                echo "HINWEIS: Das Aktualisieren der Hauptversion des Betriebssystems bedeutet normalerweise eine saubere Installation (Wipe)."
                 echo
             fi
 
-            echo "The commands to do this are:"
+            echo "Die Befehle dazu sind:"
             echo "   sudo yum install java-11-openjdk-headless"
             echo "   sudo alternatives --config java"
             echo
-            echo "When you issue the alternatives command, select the option for java-11-openjdk"
+            echo "Wenn du den alternativen Befehl ausgibst, wähle die Option für java-11-openjdk"
         fi
 
         exit 1
@@ -116,11 +116,11 @@ if mount | grep '/tmp' | grep -q noexec; then
 fi
 
 if [[ ! -x "${JAVA}" ]]; then
-    echo "Java does not have the executable permission"
-    echo "Please run the following command to fix this:"
+    echo "Java hat nicht die ausführbare Berechtigung"
+    echo "Führe den folgenden Befehl aus, um dies zu beheben:"
     echo "   sudo chmod u+x ${JAVA}"
 
     exit 1
 fi
 
-${JAVA} --add-opens java.base/java.lang=ALL-UNNAMED ${tmp} -Djava.security.policy=config/security -Xms1m -Dfile.encoding=UTF-8 -jar PhantomBotDE.jar ${1}
+${JAVA} --add-exports java.base/sun.security.x509=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED ${tmp} -Djava.security.policy=config/security -Xms1m -Dfile.encoding=UTF-8 -jar PhantomBotDE.jar ${1}
